# tfel

./: .clang-format  .gitattributes  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  INSTALL-EDF-calibre  INSTALL-cmake  LICENCE-GNU-GPL  Makefile.am  README  README.md  TODO  TODO.md  TODO.org  appveyor.yml  bootstrap.sh  check_all.sh  clang-tidy.md  clean.sh  conanfile.py  configure.ac  cppcheck.sh  env-msys.sh.in  env-win32.bat.in  env-win32.ps1.in  env-win32.sh.in  format.sh  tensorComponents-1.xml  tensorComponents-2.xml  tfel.doxygen  tmatrixComponents-1.xml  tmatrixComponents-2.xml
bindings/fortran90/: CMakeLists.txt  Makefile.am  tfel_physical_constants.f90
cmake/modules/: CodeCoverage.cmake  CppCheckTargets.cmake  FindCppCheck.cmake  FindCppCheck.cpp  FindMKL.cmake  Makefile.am  OptimizeForArchitecture.cmake  aster.cmake  autotools.cmake  boost-python.cmake  cadna.cmake  castem-unix-type.cmake  castem.cmake  clang.cmake  common-compiler-flags.cmake  compiler.cmake  cyrano.cmake  default-fortran.cmake  gcc.cmake  gnu-fortran-compiler.cmake  ieee754.cmake  intel.cmake  latex.cmake  msvc.cmake  nvhpc.cmake  pandoc.cmake  pathscale.cmake  pgi.cmake  tfel-modules-common.cmake  tfel-modules-common.cmake.in  tfel-python-modules.cmake  tfel.cmake  zset.cmake
docs/: CMakeLists.txt  Makefile.am  stensor_rotation_matrix.tm  tensor_rotation_matrix.tm
docs/articles/: CMakeLists.txt  Makefile.am
docs/doxygen/: CMakeLists.txt  Makefile.am  customdoxygen.css  header.html
docs/html/: Makefile.am
docs/mfront/: AdditionalConvergenceChecks.md  AdditionalTangentOperatorBlock.md  AdditionalTangentOperatorBlocks.md  Algorithm.md  Author.md  Author.txt  AuxiliaryModel.md  AuxiliaryStateVar.md  AuxiliaryStateVariable.md  AxialGrowth.md  Behaviour.md  BehaviourVariable.md  BehaviourVariableFactory.md  Bibliographie.bib  Bounds.md  Bounds.txt  Brick.md  CMakeLists.txt  Champs.tex  Champs.tex.in  CompareToNumericalJacobian.md  ComputeFinalStress.md  ComputeStiffnessTensor.md  ComputeStress.md  ComputeStressFreeExpansion.md  ComputeThermalExpansion.md  DSL.md  Date.md  Description.md  ElasticMaterialProperties.md  Epsilon.md  ExternalStateVar.md  ExternalStateVariable.md  Import.md  Includes.md  Includes.txt  InitJacobianInvert.md  InitLocalVariables.md  InitLocalVars.md  InitializeFunction.md  (+72 more)
docs/mtest/: AccelerationAlgorithm.txt  AccelerationAlgorithmParameter.txt  Author.txt  Behaviour.md  Behaviour.txt  Bibliographie.bib  CMakeLists.txt  CastemAccelerationPeriod.md  CastemAccelerationPeriod.txt  CastemAccelerationTrigger.md  Champs.tex.in  CohesiveForce.txt  CohesiveForceEpsilon.txt  CompareToNumericalTangentOperator.md  CompareToNumericalTangentOperator.txt  Date.md  DeformationGradient.md  DeformationGradientEpsilon.md  DynamicTimeStepScaling.md  Evolution.md  Evolution.txt  ExternalStateVariable.md  HandleThermalExpansion.md  HandleThermalExpansion.txt  Import.md  ImposedDeformationGradient.md  ImposedStrain.md  ImposedStress.md  IntegerParameter.md  IntegerParameter.txt  InternalStateVariable.txt  Makefile.am  Makefile.doc.in  MaterialProperty.md  MaterialProperty.txt  MaximalTimeStepScalingFactor.md  MaximumNumberOfIterations.txt  MaximumNumberOfSubSteps.txt  Message.md  MinimalTimeStepScalingFactor.md  (+28 more)
docs/presentations/: CMakeLists.txt  Chaboche.tex.in  Makefile.am  Makefile.doc.in  appendix.tex.in  lemaitre.tex.in  mfront-behaviours.tex.in  mfront-finitestrain.tex.in  mfront-formation.tex.in  mfront-presentation.tex.in  mtest-presentation.tex.in  norton.tex.in  tp.tex.in
docs/ptest/: CMakeLists.txt  Makefile.am  ptest.tex.in
docs/release-notes-2.0/: CMakeLists.txt  Champs.tex.in  tfel-2.0.tex.in
docs/release-notes-2.0.3/: CMakeLists.txt  Makefile.doc.in  bibliographie.bib  tfel-2.0.3.tex.in
docs/release-notes-2.0.4/: CMakeLists.txt  tfel-2.0.4.tex.in
docs/release-notes-3.0/: CMakeLists.txt  tfel-3.0.tex.in
docs/tex/: CMakeLists.txt  Makefile.am
docs/texmacs/: FiniteRotationSmallStrain1D.tm  FiniteRotationSmallStrain2D.tm  FiniteRotationSmallStrain3D.tm  FiniteStrain1D.tm  FiniteStrain3D.tm  KirchhoffStresssJaumanRateModuliToKirchoffStressDerivative2D.tm  MatrixProductDerivative1D.tm  MatrixProductDerivative2D.tm  MatrixProductDerivative3D.tm  RightCauchyDerivative2D.tm  SquareSymmetricTensorDerivative1D.tm  SymmetricTensorProductDerivative2D.tm  SymmetricTensorProductDerivative3D.tm  Tensor2D.tm  UMATFiniteStrain.tm  UMATRotationMatrix3D.tm  USU2D.tm
docs/tfel/: Bibliographie.bib  CMakeLists.txt  Champs.tex.in  Makefile.am  Makefile.doc.in  reference-guide.tex.in  tfel.doc
docs/tutorial/: CMakeLists.txt  Chaboche.tex.in  Conclusions.tex.in  Makefile.am  ViscoCompressible.tex.in  introduction.tex.in  rappels.tex.in  resume.tex.in  tutoriel.tex.in
docs/web/: BehaviourBricks.md  BetaRule.md  BiphasicLinearHomogenization.md  Burger_EDF_CIWAP_2021.md  CMakeLists.txt  CamClayStressPotential.md  DDIF2Brick.md  DDIF2StressPotential.md  Default-keywords.md  DefaultCZM-keywords.md  DefaultCZMDSL-keywords.md  DefaultDSL-keywords.md  DefaultFiniteStrain-keywords.md  DefaultFiniteStrainDSL-keywords.md  DefaultGenericBehaviour-keywords.md  DefaultModel-keywords.md  ExplicitBerveillerZaouiPolyCrystals.md  ExtendingStandardElastoViscoPlasticityBrick-PorousStressCriterion.md  ExtendingStandardElastoViscoPlasticityBrick-StressCriterion.md  FeFpImplicitPlasticity.md  FichantLaBorderieDamageAndTorelliLoadInducedStrainBehaviour.md  FichantLaBorderieDamageBehaviour.md  FischerBurmeister.md  HookeStressPotential.md  Implicit-keywords.md  ImplicitBerveillerZaouiPolyCrystals.md  ImplicitCZM-keywords.md  ImplicitFiniteStrain-keywords.md  (+235 more)
env/: CMakeLists.txt  env-python.bat.in  env-python.fish.in  env-python.ps1.in  env-python.sh.in  env.bat.in  env.fish.in  env.ps1.in  env.sh.in
include/: CMakeLists.txt  Makefile.am
trunk/: CMakeLists.txt  COPYING  CeCILL-B.txt  ChangeLog  Doxyfile.in  INSTALL-EDF-calibre  INSTALL-cmake  LGPL.txt  Makefile.am  README  bootstrap.sh  clean.sh  conanfile.txt  configure.ac  debug.sh.in  env-win32.bat.in  env-win32.sh.in  tfel.doxygen
(+15507 files in other folders)
